frontend/apps/app/components/CommonLayout/GlobalNav/GlobalNav.module.css
.globalNavContainer {
  position: relative;
  min-width: 3.25rem;
}

.globalNav {
  display: flex;
  flex-direction: column;
  position: absolute;
  top: 0;
  left: 0;
  width: 3.25rem;
  height: 100%;
  background-color: var(--pane-background);
  border-right: 1px solid var(--pane-border);
  transition: width 0.1s var(--default-timing-function);
  overflow: hidden;
  z-index: 100;
  box-shadow: none;
}

.globalNavExpanded {
  width: 11rem;
  box-shadow: 4px 0 16px rgba(0, 0, 0, 0.2);
}

.logoContainer {
  padding: var(--spacing-2);
}

.logoSection {
  display: flex;
  align-items: flex-end;
  justify-content: center;
  gap: var(--spacing-1);
  padding: var(--spacing-1half, 0.375rem) var(--spacing-2, 0.5rem);
}

.liamMigrationLogo {
  width: 7.55156rem;
  height: 0.97744rem;
}

.navSection {
  display: flex;
  flex-direction: column;
  gap: 8px;
  padding: var(--spacing-1, 0.25rem) var(--spacing-2, 0.5rem);
  flex-grow: 1;
}

.footerSection {
  display: flex;
  flex-direction: column;
  padding: var(--spacing-1, 0.25rem) var(--spacing-2, 0.5rem) var(--spacing-2, 0.5rem);
  margin-top: auto;
}

